--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   
   body {
     font-family: 'Roboto', sans-serif;
+    text-align:center;
   }
   fieldset{
       border:none;
@@ -11,4 +12,7 @@
   }
 .image-display{
     text-align:center;
+}
+.js-image-result{
+    width:50%;
 }
